--- a/css/css.css
+++ b/css/css.css
@@ -4,8 +4,6 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:65%;margin:0 auto;display:flex;justify-content:space-around;flex-wrap:wrap;align-content:center}.wrapperFlexBox button{margin-bottom:100px}.wrapperFlexBox button+button{margin-left:60px}
 
 
-
-
 /* Reglas generales para todos los botones de la biblioteca
 -Hay que exportarlo siempre junto con las reglas del boton especifico 
 -Siempre debe ir mas arriba en la cascada que las reglas particulares de cada boton */
@@ -28,6 +26,12 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 *::after,::before{
   pointer-events: none;
   position: absolute;
+}
+.wrapper-botonesMiguel{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  z-index: 1;
 }
 
 /********************************************************* BOTON ENTER -1- *********************************************************/
