--- a/css/css.css
+++ b/css/css.css
@@ -7,6 +7,17 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 /* Reglas generales para todos los botones de la biblioteca
 -Hay que exportarlo siempre junto con las reglas del boton especifico 
 -Siempre debe ir mas arriba en la cascada que las reglas particulares de cada boton */
+
+.wrapper-botonesMiguel{
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+  z-index: 1;
+  /* Con estas propiedades posicionamos el boton */
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%); */
+}
 .botonesMiguel {
   display: inline-block;
   width: fit-content;
@@ -27,16 +38,11 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
   pointer-events: none;
   position: absolute;
 }
-.wrapper-botonesMiguel{
-  width: fit-content;
-  height: fit-content;
-  position: relative;
-  z-index: 1;
-}
+
 
 /********************************************************* BOTON ENTER -1- *********************************************************/
 .boton1{
-  font-size: 3.5rem;
+  font-size: 3.5rem;   /* <= Cambiar el tamaño del boton*/
   color: dodgerblue;
 }
 .boton1::before{
@@ -71,7 +77,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************* BOTON ENTER -2- *********************************************************/
 .boton2{
-  font-size: 3.5rem;
+  font-size: 3.5rem;   /* <= Cambiar el tamaño del boton*/
   color: dodgerblue;
 }
 .boton2::before{
@@ -113,7 +119,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTON ENTER -3- **********************************************************/
 .boton3{
-  font-size: 3.5rem;
+  font-size: 3.5rem;   /* <= Cambiar el tamaño del boton*/
   color: dodgerblue;
 }
 .boton3::before{
@@ -145,7 +151,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTON ENTER -4- **********************************************************/
 .boton4{
-  font-size: 3rem;
+  font-size: 3rem;   /* <= Cambiar el tamaño del boton*/
   color: white;
   background-color: #2f90ff;
   height: 2.5em;
@@ -227,7 +233,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTON LIGHT -5- **********************************************************/
 .boton5{
-  font-size: 2rem;
+  font-size: 2rem;   /* <= Cambiar el tamaño del boton*/
   background-image: radial-gradient(circle,rgba(198,197,203,1)0%,rgba(255,252,0,1) 0%,rgba(237,240,241,1)100%);
   background-size: 160%;
   background-position: center;
@@ -265,7 +271,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTON READ MORE -6- **********************************************************/
 .boton6{
-  font-size: 2rem;
+  font-size: 2rem;   /* <= Cambiar el tamaño del boton*/
   background-color: white;
   color: #223344;
   text-align: center;
@@ -299,7 +305,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTON CIRCULAR READ-MORE -7- **********************************************************/
 .boton7{
-  font-size: 2rem;
+  font-size: 2rem;   /* <= Cambiar el tamaño del boton*/
   background-color: white;
   color: #223344;
   width: 5em; 
@@ -340,7 +346,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTONES GHOST PRIMARY -8- **********************************************************/
 .boton8{
-  font-size: 1.8rem;
+  font-size: 1.8rem;   /* <= Cambiar el tamaño del boton*/
   box-sizing: border-box;
   background-color: coral;
   color: #223344;
@@ -359,7 +365,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /********************************************************** BOTONES GHOST SECONDARY -9- **********************************************************/
 .boton9{
-  font-size: 1.8rem;
+  font-size: 1.8rem;   /* <= Cambiar el tamaño del boton*/
   box-sizing: border-box;
   color:coral;
   border:2px solid coral;
@@ -377,7 +383,7 @@ html{font-size:100%}body{padding:8%;background-color:#234}.wrapperFlexBox{width:
 
 /***************************************************** BOTON ENORME !IMPORTANTE EXPORTAR TAMBIEN LA IMAGEN DEL BACKGROUND-IMAGE *****************************************************/
 .Elboton{
-  font-size: 1.3rem;
+  font-size: 1.3rem;   /* <= Cambiar el tamaño del boton*/
   width: 15em;
   height: 15em;
   background-image: url("ui-img/banda.gif");/*  <= !!!EXPORTAR IMAGEN !!!   */
